# Cpp-Implementation

./: CMakeLists.txt  README.md  RIFT_demo.cpp  phase.cpp  phase.h  rift_descriptor_no_rotation_invariance.cpp  rift_descriptor_no_rotation_invariance.h  rift_no_rotation_invariance.cpp  rift_no_rotation_invariance.h
